--- a/mailer/mails/template_esher_risk.html
+++ b/mailer/mails/template_esher_risk.html
@@ -7,8 +7,12 @@
 <body>
 <p>
 <pre>
-    Здравствуйте!
+    Привет "{{.FullName}}"!
 
+    Мы получили твою заявку на осеннюю Школу ЭШЭР "Риск"
+    Будем держать тебя в курсе.
+
+    Команда ЭШЭР.
 </pre>
 </p>
 
