--- a/mailer/mails/template_esher_risk.html
+++ b/mailer/mails/template_esher_risk.html
@@ -7,12 +7,22 @@
 <body>
 <p>
 <pre>
-    Привет "{{.FullName}}"!
+    Привет {{.Name}}!
 
     Мы получили твою заявку на осеннюю Школу ЭШЭР "Риск"
-    Будем держать тебя в курсе.
+    Скоро мы сделаем группу и чат Школы, а пока все новости можно смотреть в основной группе <a href="https://vk.com/gruppa_esher">ЭШЭР</a>.
 
     Команда ЭШЭР.
+
+    Это сообщение сформировано автоматически, все вопросы можно задать команде Школы:
+    <a href="https://vk.com/id7631194">Дима Захаров</a>
+    <a href="https://vk.com/margoram">Маргарита Кожекина</a>
+    <a href="https://vk.com/id13221037">Маша Александрова</a>
+    <a href="https://vk.com/arykalin">Александр Рыкалин</a>
+    <a href="https://vk.com/agnja">Агни Соколова</a>
+
+    <a href="https://metaversum.ru/esher2021osen">Сайт Школы</a>.
+    <a href="https://docs.google.com/document/d/188qLRUdmvMf342R-eEr9KFdrKoMU018Y5qQEmAGQ1lo/edit?usp=sharing">ДОК - БОЛЬШАЯ ТЕЛЕГА ЧТО ТАКОЕ ЭТА ШКОЛА</a>.
 </pre>
 </p>
 
