--- a/mailer/mails/template_esher_risk.html
+++ b/mailer/mails/template_esher_risk.html
@@ -10,9 +10,7 @@
     Привет {{.Name}}!
 
     Мы получили твою заявку на осеннюю Школу ЭШЭР "Риск"
-    Скоро мы сделаем группу и чат Школы, а пока все новости можно смотреть в основной группе <a href="https://vk.com/gruppa_esher">ЭШЭР</a>.
-
-    Команда ЭШЭР.
+    Скоро мы сделаем группу и чат Школы, а пока все новости можно смотреть в основной группе<a href="https://vk.com/gruppa_esher">вконтакте</a>.
 
     Это сообщение сформировано автоматически, все вопросы можно задать команде Школы:
     <a href="https://vk.com/id7631194">Дима Захаров</a>
@@ -23,6 +21,8 @@
 
     <a href="https://metaversum.ru/esher2021osen">Сайт Школы</a>.
     <a href="https://docs.google.com/document/d/188qLRUdmvMf342R-eEr9KFdrKoMU018Y5qQEmAGQ1lo/edit?usp=sharing">ДОК - БОЛЬШАЯ ТЕЛЕГА ЧТО ТАКОЕ ЭТА ШКОЛА</a>.
+
+    Команда ЭШЭР.
 </pre>
 </p>
 
