--- a/mailer/mails/template_esher_risk.html
+++ b/mailer/mails/template_esher_risk.html
@@ -10,7 +10,8 @@
     Привет {{.Name}}!
 
     Мы получили твою заявку на осеннюю Школу ЭШЭР "Риск"
-    Скоро мы сделаем группу и чат Школы, а пока все новости можно смотреть в основной группе <a href="https://vk.com/gruppa_esher">вконтакте</a>.
+    Все новости  можно смотреть в группе ЭШЭР <a href="https://vk.com/gruppa_esher">вконтакте</a>.
+    Также для учатсников Школы мы сделали чат в телеграм, где можно с нам пообщаться и позадавать вопросы: <a href="https://t.me/joinchat/GGjzU5mgiDIwNmM6">чат школы</a>
 
     Это сообщение сформировано автоматически, все вопросы можно задать команде Школы:
 
