--- a/mailer/mails/template_esher_risk.html
+++ b/mailer/mails/template_esher_risk.html
@@ -11,7 +11,7 @@
 
     Мы получили твою заявку на осеннюю Школу ЭШЭР "Риск"
     Все новости  можно смотреть в группе ЭШЭР <a href="https://vk.com/gruppa_esher">вконтакте</a>.
-    Также для учатсников Школы мы сделали чат в телеграм, где можно с нам пообщаться и позадавать вопросы: <a href="https://t.me/joinchat/GGjzU5mgiDIwNmM6">чат школы</a>
+    Также для участников Школы мы сделали чат в телеграм, где можно с нам пообщаться и позадавать вопросы: <a href="https://t.me/joinchat/GGjzU5mgiDIwNmM6">чат школы</a>
 
     Это сообщение сформировано автоматически, все вопросы можно задать команде Школы:
 
