update template for winter school

--- a/mailer/mails/template_esher_risk.html
+++ b/mailer/mails/template_esher_risk.html
@@ -11,19 +11,11 @@
 
     Мы получили твою заявку на осеннюю Школу ЭШЭР "Риск"
     Все новости  можно смотреть в группе ЭШЭР <a href="https://vk.com/gruppa_esher">вконтакте</a>.
-    Также для участников Школы мы сделали чат в телеграм, где можно с нам пообщаться и позадавать вопросы: <a href="https://t.me/joinchat/GGjzU5mgiDIwNmM6">чат школы</a>
 
-    Это сообщение сформировано автоматически, все вопросы можно задать команде Школы:
-
-    <a href="https://vk.com/id7631194">Дима Захаров</a>
-    <a href="https://vk.com/margoram">Маргарита Кожекина</a>
-    <a href="https://vk.com/id13221037">Маша Александрова</a>
-    <a href="https://vk.com/arykalin">Александр Рыкалин</a>
-    <a href="https://vk.com/agnja">Агни Соколова</a>
-
-    <a href="https://metaversum.ru/esher2021osen">Сайт Школы</a>.
+    Это сообщение сформировано автоматически, все вопросы можно задать в чате участников Школы: <a href="https://t.me/joinchat/mtjapg__vjI2NDky">чат школы</a>
 
     <a href="https://docs.google.com/document/d/188qLRUdmvMf342R-eEr9KFdrKoMU018Y5qQEmAGQ1lo/edit?usp=sharing">ДОК - БОЛЬШАЯ ТЕЛЕГА ЧТО ТАКОЕ ЭТА ШКОЛА</a>.
+    <a href="https://vk.com/album-654907_280517185">А ещё можно посмотреть фотки с предыдущей Школы</a>
 
     Команда ЭШЭР.
 </pre>
