--- a/mailer/mails/template_esher_risk.html
+++ b/mailer/mails/template_esher_risk.html
@@ -9,7 +9,7 @@
 <pre>
     Привет {{.Name}}!
 
-    Мы получили твою заявку на осеннюю Школу ЭШЭР "Риск"
+    Мы получили твою заявку на зимнюю подростковую Школу ЭШЭР
     Все новости  можно смотреть в группе ЭШЭР <a href="https://vk.com/gruppa_esher">вконтакте</a>.
 
     Это сообщение сформировано автоматически, все вопросы можно задать в чате участников Школы: <a href="https://t.me/joinchat/mtjapg__vjI2NDky">чат школы</a>
